@@ -660,6 +660,11 @@ public final class DirectPostingsFormat extends PostingsFormat {
     }
 
     @Override
+    public boolean hasFreqs() {
+      return hasFreq;
+    }
+
+    @Override
     public boolean hasOffsets() {
       return hasOffsets;
     }
