@@ -35,6 +35,7 @@ import org.apache.lucene.util.automaton.CompiledAutomaton;
 public final class MultiTerms extends Terms {
   private final Terms[] subs;
   private final ReaderSlice[] subSlices;
+  private final boolean hasFreqs;
   private final boolean hasOffsets;
   private final boolean hasPositions;
   private final boolean hasPayloads;
@@ -50,15 +51,18 @@ public final class MultiTerms extends Terms {
     this.subSlices = subSlices;
     
     assert subs.length > 0 : "inefficient: don't use MultiTerms over one sub";
+    boolean _hasFreqs = true;
     boolean _hasOffsets = true;
     boolean _hasPositions = true;
     boolean _hasPayloads = false;
     for(int i=0;i<subs.length;i++) {
+      _hasFreqs &= subs[i].hasFreqs();
       _hasOffsets &= subs[i].hasOffsets();
       _hasPositions &= subs[i].hasPositions();
       _hasPayloads |= subs[i].hasPayloads();
     }
 
+    hasFreqs = _hasFreqs;
     hasOffsets = _hasOffsets;
     hasPositions = _hasPositions;
     hasPayloads = hasPositions && _hasPayloads; // if all subs have pos, and at least one has payloads.
@@ -141,6 +145,11 @@ public final class MultiTerms extends Terms {
       sum += v;
     }
     return sum;
+  }
+
+  @Override
+  public boolean hasFreqs() {
+    return hasFreqs;
   }
 
   @Override
